welcome.lessons.welcome.conditions.Conditions.scala.error
Program:1: error: '(' expected but identifier found.
if EstFaceMur() {
   ^Program:9: error: illegal start of simple expression
	}
        ^